feat: update on some files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Junior Front-end developer</h2>
     <hr>
     <h3><b>Contact information:</b></h3>
-    <p><strong>Phone:</strong>+998 250 06 03</a>
+    <p><strong>Phone:</strong>+998 250 06 03</p>
     <p><strong>E-mail:</strong>dioora2o3@gmail.com</p>
     <p><strong>Telegram:</strong>@sheisdiyora</p>
     <hr>
