feat: update on some of the  files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
     <h3>Courses:</h3>
     <ul>
-      <li>HTML and CSS on <a href="https://zerotomastery.io">zerotomastery.io</a></li>
+      <li>HTML and CSS on <a href="https://zerotomastery.io">zerotomastery</a></li>
       <li>Javascript at Webbrain academy</li>
       <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
     </ul>
