feat: cv layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div class="cv-container">
+    <div class="avatar">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQinMNf_Hjwf-aKigY4eASZhdz3F1WxJBIbuQ&usqp=CAU" alt="avatar-icon">
+    </div>
     <h1>Soyibjonova Diyora</h1>
     <hr>
     <h2>Junior Front-end developer</h2>
@@ -38,6 +41,13 @@
       <li>English - Upper-intermediate</li>
       <li>Uzbek - Native</li>
     </ul>
+    <hr>
+    <section class="footer">
+      <a href="https://github.com/D1yora">Github</a>
+      <p>2023</p>
+      <img class="img-rsschool" src="https://rs.school/images/rs_school_js.svg" alt="rsschool-logo">
+      <a href="https://rs.school/js/">Course</a>
+    </section>
   </div>
 
 </body>
