feat: update on some of the  files

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="cv-container">
-    <div class="avatar">
+    <nav class="avatar">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQinMNf_Hjwf-aKigY4eASZhdz3F1WxJBIbuQ&usqp=CAU" alt="avatar-icon">
-    </div>
+    </nav>
     <h1>Soyibjonova Diyora</h1>
     <hr>
     <h2>Junior Front-end developer</h2>
